--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="header-mobile">
                 <a href="index.html">
-                    <img src="/public/assets/img/logo.png" alt="">
+                    <img src="./public/assets/img/logo.png" alt="">
                 </a>
                     <label for="check-menu">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
@@ -70,7 +70,7 @@
                     </h1>
                 </div>
                 <div class="content-header_right">
-                    <img src="/public/assets/img/Banner1.png" alt="Banner1">
+                    <img src="./public/assets/img/Banner1.png" alt="Banner1">
                 </div>
             </div>
         </div>
@@ -81,11 +81,11 @@
             </div>
             <div class="popular-cake_right">
                 <div class="popular-cake_item">
-                    <img src="/public/assets/img/gt2.png" alt="popular-cake">
+                    <img src="./public/assets/img/gt2.png" alt="popular-cake">
                     <h2>Try it today <span>More fun more taste</span></h2>
                 </div>
                 <div class="popular-cake_item">
-                    <img src="/public/assets/img/gt3.png" alt="popular-cake">
+                    <img src="./public/assets/img/gt3.png" alt="popular-cake">
                     <h2> Try it today <span>Fresh & Chili</span></h2>
                 </div>
             </div>
@@ -100,7 +100,7 @@
             </div>
             <div class="choose-enjoy_list">
                 <div class="choose-enjoy_item">
-                    <img src="/public/assets/img/choose1.png" alt="choose-enjoy">
+                    <img src="./public/assets/img/choose1.png" alt="choose-enjoy">
                     <div class="detail-choose">
                         <h3>Lorem ipsum dolor</h3>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</span>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="choose-enjoy_item">
-                    <img src="/public/assets/img/choose2.png" alt="choose-enjoy">
+                    <img src="./public/assets/img/choose2.png" alt="choose-enjoy">
                     <div class="detail-choose">
                         <h3>Lorem ipsum dolor</h3>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</span>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="choose-enjoy_item">
-                    <img src="/public/assets/img/choose3.png" alt="choose-enjoy">
+                    <img src="./public/assets/img/choose3.png" alt="choose-enjoy">
                     <div class="detail-choose">
                         <h3>Lorem ipsum dolor</h3>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</span>
@@ -136,7 +136,7 @@
                             viverra maecenas accumsan lacus vel facilisis. </p>
                     </div>
                     <div class="img-discover">
-                        <img src="/public/assets/img/discover1.png" alt="">
+                        <img src="./public/assets/img/discover1.png" alt="">
                     </div>
                 </div>
                 <div class="carousel-cell discover-item">
@@ -148,7 +148,7 @@
                             viverra maecenas accumsan lacus vel facilisis. </p>
                     </div>
                     <div class="img-discover">
-                        <img src="/public/assets/img/discover1.png" alt="">
+                        <img src="./public/assets/img/discover1.png" alt="">
                     </div>
                 </div>
                 <div class="carousel-cell discover-item">
@@ -160,7 +160,7 @@
                             viverra maecenas accumsan lacus vel facilisis. </p>
                     </div>
                     <div class="img-discover">
-                        <img src="/public/assets/img/discover1.png" alt="">
+                        <img src="./public/assets/img/discover1.png" alt="">
                     </div>
                 </div>
             </div>
@@ -181,7 +181,7 @@
             <div class="footer-information">
                 <div class="footer-information_left">
                     <a href="index.html">
-                        <img src="/public/assets/img/logo-footer.png" alt="">
+                        <img src="./public/assets/img/logo-footer.png" alt="">
                     </a>
                     <p class="para-footer">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -195,7 +195,7 @@
                         <span>Main Road, Building Name, Country</span>
                     </li>
                     <li>
-                        <img src="/public/assets/img/Email.png" alt="email">
+                        <img src="./public/assets/img/Email.png" alt="email">
                         <span>info@companyname.com</span>
                     </li>
                 </ul>
@@ -205,22 +205,22 @@
                 <ul class="list-social">
                     <li class="social-item">
                         <a href="#">
-                            <img src="/public/assets/img/Instagram.png" alt="">
+                            <img src="./public/assets/img/Instagram.png" alt="">
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="#">
-                            <img src="/public/assets/img/Facebook.png" alt="">
+                            <img src="./public/assets/img/Facebook.png" alt="">
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="#">
-                            <img src="/public/assets/img/Twitter.png" alt="">
+                            <img src="./public/assets/img/Twitter.png" alt="">
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="#">
-                            <img src="/public/assets/img/WhatsApp.png" alt="">
+                            <img src="./public/assets/img/WhatsApp.png" alt="">
                         </a>
                     </li>
                 </ul>
