--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="header">
             <div class="header-top">
                 <a href="index.html">
-                    <img src="/public/assets/img/logo.png" alt="logo">
+                    <img src="./public/assets/img/logo.png" alt="logo">
                 </a>
                 <div class="header-information">
                     <div class="header-contact">
-                        <img src="/public/assets/img/logomenu.png" alt="">
+                        <img src="./public/assets/img/logomenu.png" alt="">
                         <span>Express Delivery +1 234 567 890</span>
                     </div>
                     <ul class="list-menu">
@@ -76,7 +76,7 @@
         </div>
         <div class="popular-cake">
             <div class="popular-cake-left popular-cake_item">
-                <img src="/public/assets/img/gt1.png" alt="popular-cake">
+                <img src="./public/assets/img/gt1.png" alt="popular-cake">
                 <h2>Try it today <span>Most Popular Burger</span></h2>
             </div>
             <div class="popular-cake_right">
@@ -191,7 +191,7 @@
                 </div>
                 <ul class="footer-information_right">
                     <li>
-                        <img src="/public/assets/img/map.png" alt="map">
+                        <img src="./public/assets/img/map.png" alt="map">
                         <span>Main Road, Building Name, Country</span>
                     </li>
                     <li>
